# ace

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml  general_specifications.md  implementation_plan.md  protocol.md  story.md
client/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.svelte  app.css
client/src/lib/: websocket.ts
client/src/lib/components/: Chat.svelte  MessageBubble.svelte
client/src/lib/stores/: connection.svelte.ts  connection.ts
server/: config.py  connection.py  database.py  main.py  protocol.py  pyproject.toml  session_manager.py
server/llm/: router.py
server/llm/adapters/: gemini.py  ollama.py
